Support any uid supplier

--- a/.palantir/revapi.yml
+++ b/.palantir/revapi.yml
@@ -3472,6 +3472,10 @@ acceptedBreaks:
       justification: "support_any_uid_supplier_impl"
     - code: "java.method.parameterTypeChanged"
       old: "parameter void net.fortuna.ical4j.transform.calendar.ReplyTransformer::<init>(===net.fortuna.ical4j.util.UidGenerator===)"
+      new: "parameter void net.fortuna.ical4j.transform.calendar.ReplyTransformer::<init>(===java.util.function.Supplier<net.fortuna.ical4j.model.property.Uid>===)"
+      justification: "support_any_uid_supplier_impl"
+    - code: "java.method.parameterTypeChanged"
+      old: "parameter void net.fortuna.ical4j.transform.calendar.ReplyTransformer::<init>(===net.fortuna.ical4j.util.UidGenerator===)"
       new: "parameter void net.fortuna.ical4j.transform.calendar.ReplyTransformer::<init>(===net.fortuna.ical4j.model.property.Attendee===)"
       justification: "support_any_uid_supplier_impl"
     - code: "java.method.parameterTypeChanged"
