--- a/.github/workflows/publish-snapshots.yml
+++ b/.github/workflows/publish-snapshots.yml
@@ -4,36 +4,12 @@ on:
   push:
     branches:
       - 'develop'
-      - 'feature/jsr-310-localdate'
 
 permissions: read-all
 
 jobs:
-  gradle:
-    name: Test with Java ${{ matrix.jdk }}
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        jdk: [ '11', '17', '21' ] # removed JDK due to plugin errors
-
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-
-    - name: Set up JDK ${{ matrix.jdk }}
-      uses: actions/setup-java@v3
-      with:
-        distribution: temurin
-        java-version: ${{ matrix.jdk }}
-        cache: 'gradle'
-
-    - name: Setup Gradle
-      uses: gradle/gradle-build-action@v2
-
-    - name: Execute Gradle build
-      run: ./gradlew check -x test --console=plain --warning-mode all
+  test:
+    uses: ./.github/workflows/common/test.yml@main
 
   publish:
     name: Publish Artifact
