Align groovy and hamcrest versions
spock, groovy and junit were disagreeing on versions, leading to
split package errors when building on Nix.

Fixes #725

--- a/build.gradle
+++ b/build.gradle
@@ -96,6 +96,8 @@ dependencies {
     testImplementation platform("org.spockframework:spock-bom:$spockVersion"),
             "org.spockframework:spock-core"
 
+    testImplementation "org.hamcrest:hamcrest-core:$hamcrestVersion"
+
     // testcontainers
     testImplementation "org.testcontainers:testcontainers:$testcontainersVersion",
             "org.testcontainers:spock:$testcontainersVersion"
