Fixed code smells by requiring explicit casting where classcastexception is more likely

--- a/.palantir/revapi.yml
+++ b/.palantir/revapi.yml
@@ -3494,6 +3494,14 @@ acceptedBreaks:
       justification: "support_any_uid_supplier_impl"
   "4.0.2":
     org.mnode.ical4j:ical4j:
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.model.ComponentFactoryImpl"
+      new: "class net.fortuna.ical4j.model.ComponentFactoryImpl"
+      justification: "require_explicit_casting"
+    - code: "java.class.superTypeTypeParametersChanged"
+      old: "class net.fortuna.ical4j.model.ComponentFactoryImpl"
+      new: "class net.fortuna.ical4j.model.ComponentFactoryImpl"
+      justification: "require_explicit_casting"
     - code: "java.generics.elementNowParameterized"
       old: "class net.fortuna.ical4j.model.property.ExRule"
       new: "class net.fortuna.ical4j.model.property.ExRule<T extends java.time.temporal.Temporal>"
@@ -3541,7 +3549,98 @@ acceptedBreaks:
       new: "method <R extends T extends java.lang.Object> R net.fortuna.ical4j.model.Prototype<T>::copy()\
         \ @ net.fortuna.ical4j.model.RecurrenceSupport<T extends net.fortuna.ical4j.model.component.CalendarComponent>"
       justification: "property_accessor_refactoring"
+    - code: "java.generics.formalTypeParameterRemoved"
+      old: "method <C extends net.fortuna.ical4j.model.Component> C net.fortuna.ical4j.model.Component::getFluentTarget()"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.Component::getFluentTarget()"
+      justification: "require_explicit_casting"
+    - code: "java.generics.formalTypeParameterRemoved"
+      old: "method <C extends net.fortuna.ical4j.model.Component> C net.fortuna.ical4j.model.FluentComponent::getFluentTarget()"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.FluentComponent::getFluentTarget()"
+      justification: "require_explicit_casting"
+    - code: "java.generics.formalTypeParameterRemoved"
+      old: "method <C extends net.fortuna.ical4j.model.Component> C net.fortuna.ical4j.model.RecurrenceSupport<T\
+        \ extends net.fortuna.ical4j.model.component.CalendarComponent>::copy() throws\
+        \ java.text.ParseException, java.io.IOException, java.net.URISyntaxException"
+      new: "method T net.fortuna.ical4j.model.Prototype<T>::copy() @ net.fortuna.ical4j.model.RecurrenceSupport<T\
+        \ extends net.fortuna.ical4j.model.component.CalendarComponent>"
+      justification: "require_explicit_casting"
+    - code: "java.generics.formalTypeParameterRemoved"
+      old: "method <P extends net.fortuna.ical4j.model.Property> P net.fortuna.ical4j.model.FluentProperty::getFluentTarget()"
+      new: "method net.fortuna.ical4j.model.Property net.fortuna.ical4j.model.FluentProperty::getFluentTarget()"
+      justification: "require_explicit_casting"
+    - code: "java.generics.formalTypeParameterRemoved"
+      old: "method <P extends net.fortuna.ical4j.model.Property> P net.fortuna.ical4j.model.Property::getFluentTarget()"
+      new: "method net.fortuna.ical4j.model.Property net.fortuna.ical4j.model.Property::getFluentTarget()"
+      justification: "require_explicit_casting"
+    - code: "java.generics.formalTypeParameterRemoved"
+      old: "method <T extends net.fortuna.ical4j.model.Component> T net.fortuna.ical4j.model.Component::copy()"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.Component::copy()"
+      justification: "require_explicit_casting"
+    - code: "java.generics.formalTypeParameterRemoved"
+      old: "method <T extends net.fortuna.ical4j.model.Component> T net.fortuna.ical4j.model.ComponentFactoryImpl::createComponent(java.lang.String)"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.ComponentFactoryImpl::createComponent(java.lang.String)"
+      justification: "require_explicit_casting"
+    - code: "java.generics.formalTypeParameterRemoved"
+      old: "method <T extends net.fortuna.ical4j.model.Component> T net.fortuna.ical4j.model.ComponentFactoryImpl::createComponent(java.lang.String,\
+        \ net.fortuna.ical4j.model.PropertyList)"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.ComponentFactoryImpl::createComponent(java.lang.String,\
+        \ net.fortuna.ical4j.model.PropertyList)"
+      justification: "require_explicit_casting"
+    - code: "java.generics.formalTypeParameterRemoved"
+      old: "method <T extends net.fortuna.ical4j.model.Component> T net.fortuna.ical4j.model.ComponentFactoryImpl::createComponent(java.lang.String,\
+        \ net.fortuna.ical4j.model.PropertyList, net.fortuna.ical4j.model.ComponentList<?\
+        \ extends net.fortuna.ical4j.model.Component>)"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.ComponentFactoryImpl::createComponent(java.lang.String,\
+        \ net.fortuna.ical4j.model.PropertyList, net.fortuna.ical4j.model.ComponentList<?\
+        \ extends net.fortuna.ical4j.model.Component>)"
+      justification: "require_explicit_casting"
+    - code: "java.generics.formalTypeParameterRemoved"
+      old: "method <T extends net.fortuna.ical4j.model.Component> T net.fortuna.ical4j.model.component.Participant::copy()"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.component.Participant::copy()"
+      justification: "require_explicit_casting"
+    - code: "java.generics.formalTypeParameterRemoved"
+      old: "method <T extends net.fortuna.ical4j.model.Component> T net.fortuna.ical4j.model.component.VAlarm::copy()"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.component.VAlarm::copy()"
+      justification: "require_explicit_casting"
+    - code: "java.generics.formalTypeParameterRemoved"
+      old: "method <T extends net.fortuna.ical4j.model.Component> T net.fortuna.ical4j.model.component.VAvailability::copy()"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.component.VAvailability::copy()"
+      justification: "require_explicit_casting"
+    - code: "java.generics.formalTypeParameterRemoved"
+      old: "method <T extends net.fortuna.ical4j.model.Component> T net.fortuna.ical4j.model.component.VEvent::copy()"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.component.VEvent::copy()"
+      justification: "require_explicit_casting"
+    - code: "java.generics.formalTypeParameterRemoved"
+      old: "method <T extends net.fortuna.ical4j.model.Component> T net.fortuna.ical4j.model.component.VFreeBusy::copy()"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.component.VFreeBusy::copy()"
+      justification: "require_explicit_casting"
+    - code: "java.generics.formalTypeParameterRemoved"
+      old: "method <T extends net.fortuna.ical4j.model.Component> T net.fortuna.ical4j.model.component.VJournal::copy()"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.component.VJournal::copy()"
+      justification: "require_explicit_casting"
+    - code: "java.generics.formalTypeParameterRemoved"
+      old: "method <T extends net.fortuna.ical4j.model.Component> T net.fortuna.ical4j.model.component.VTimeZone::copy()"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.component.VTimeZone::copy()"
+      justification: "require_explicit_casting"
+    - code: "java.generics.formalTypeParameterRemoved"
+      old: "method <T extends net.fortuna.ical4j.model.Component> T net.fortuna.ical4j.model.component.VToDo::copy()"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.component.VToDo::copy()"
+      justification: "require_explicit_casting"
     - code: "java.method.exception.checkedRemoved"
+      old: "method <C extends net.fortuna.ical4j.model.Component> C net.fortuna.ical4j.model.RecurrenceSupport<T\
+        \ extends net.fortuna.ical4j.model.component.CalendarComponent>::copy() throws\
+        \ java.text.ParseException, java.io.IOException, java.net.URISyntaxException"
+      new: "method <R extends T extends java.lang.Object> R net.fortuna.ical4j.model.Prototype<T>::copy()\
+        \ @ net.fortuna.ical4j.model.RecurrenceSupport<T extends net.fortuna.ical4j.model.component.CalendarComponent>"
+      justification: "property_accessor_refactoring"
+    - code: "java.method.exception.checkedRemoved"
+      old: "method <C extends net.fortuna.ical4j.model.Component> C net.fortuna.ical4j.model.RecurrenceSupport<T\
+        \ extends net.fortuna.ical4j.model.component.CalendarComponent>::copy() throws\
+        \ java.text.ParseException, java.io.IOException, java.net.URISyntaxException"
+      new: "method T net.fortuna.ical4j.model.Prototype<T>::copy() @ net.fortuna.ical4j.model.RecurrenceSupport<T\
+        \ extends net.fortuna.ical4j.model.component.CalendarComponent>"
+      justification: "require_explicit_casting"
+    - code: "java.method.movedToSuperClass"
       old: "method <C extends net.fortuna.ical4j.model.Component> C net.fortuna.ical4j.model.RecurrenceSupport<T\
         \ extends net.fortuna.ical4j.model.component.CalendarComponent>::copy() throws\
         \ java.text.ParseException, java.io.IOException, java.net.URISyntaxException"
@@ -3552,9 +3651,9 @@ acceptedBreaks:
       old: "method <C extends net.fortuna.ical4j.model.Component> C net.fortuna.ical4j.model.RecurrenceSupport<T\
         \ extends net.fortuna.ical4j.model.component.CalendarComponent>::copy() throws\
         \ java.text.ParseException, java.io.IOException, java.net.URISyntaxException"
-      new: "method <R extends T extends java.lang.Object> R net.fortuna.ical4j.model.Prototype<T>::copy()\
-        \ @ net.fortuna.ical4j.model.RecurrenceSupport<T extends net.fortuna.ical4j.model.component.CalendarComponent>"
-      justification: "property_accessor_refactoring"
+      new: "method T net.fortuna.ical4j.model.Prototype<T>::copy() @ net.fortuna.ical4j.model.RecurrenceSupport<T\
+        \ extends net.fortuna.ical4j.model.component.CalendarComponent>"
+      justification: "require_explicit_casting"
     - code: "java.method.removed"
       old: "method java.util.Optional<net.fortuna.ical4j.model.property.TzOffsetFrom>\
         \ net.fortuna.ical4j.model.component.Observance::getOffsetFrom()"
@@ -3563,6 +3662,83 @@ acceptedBreaks:
       old: "method java.util.Optional<net.fortuna.ical4j.model.property.TzOffsetTo>\
         \ net.fortuna.ical4j.model.component.Observance::getOffsetTo()"
       justification: "property_accessor_refactoring"
+    - code: "java.method.returnTypeTypeParametersChanged"
+      old: "method <C extends net.fortuna.ical4j.model.Component> C net.fortuna.ical4j.model.Component::getFluentTarget()"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.Component::getFluentTarget()"
+      justification: "require_explicit_casting"
+    - code: "java.method.returnTypeTypeParametersChanged"
+      old: "method <C extends net.fortuna.ical4j.model.Component> C net.fortuna.ical4j.model.FluentComponent::getFluentTarget()"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.FluentComponent::getFluentTarget()"
+      justification: "require_explicit_casting"
+    - code: "java.method.returnTypeTypeParametersChanged"
+      old: "method <C extends net.fortuna.ical4j.model.Component> C net.fortuna.ical4j.model.RecurrenceSupport<T\
+        \ extends net.fortuna.ical4j.model.component.CalendarComponent>::copy() throws\
+        \ java.text.ParseException, java.io.IOException, java.net.URISyntaxException"
+      new: "method T net.fortuna.ical4j.model.Prototype<T>::copy() @ net.fortuna.ical4j.model.RecurrenceSupport<T\
+        \ extends net.fortuna.ical4j.model.component.CalendarComponent>"
+      justification: "require_explicit_casting"
+    - code: "java.method.returnTypeTypeParametersChanged"
+      old: "method <P extends net.fortuna.ical4j.model.Property> P net.fortuna.ical4j.model.FluentProperty::getFluentTarget()"
+      new: "method net.fortuna.ical4j.model.Property net.fortuna.ical4j.model.FluentProperty::getFluentTarget()"
+      justification: "require_explicit_casting"
+    - code: "java.method.returnTypeTypeParametersChanged"
+      old: "method <P extends net.fortuna.ical4j.model.Property> P net.fortuna.ical4j.model.Property::getFluentTarget()"
+      new: "method net.fortuna.ical4j.model.Property net.fortuna.ical4j.model.Property::getFluentTarget()"
+      justification: "require_explicit_casting"
+    - code: "java.method.returnTypeTypeParametersChanged"
+      old: "method <T extends net.fortuna.ical4j.model.Component> T net.fortuna.ical4j.model.Component::copy()"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.Component::copy()"
+      justification: "require_explicit_casting"
+    - code: "java.method.returnTypeTypeParametersChanged"
+      old: "method <T extends net.fortuna.ical4j.model.Component> T net.fortuna.ical4j.model.ComponentFactoryImpl::createComponent(java.lang.String)"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.ComponentFactoryImpl::createComponent(java.lang.String)"
+      justification: "require_explicit_casting"
+    - code: "java.method.returnTypeTypeParametersChanged"
+      old: "method <T extends net.fortuna.ical4j.model.Component> T net.fortuna.ical4j.model.ComponentFactoryImpl::createComponent(java.lang.String,\
+        \ net.fortuna.ical4j.model.PropertyList)"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.ComponentFactoryImpl::createComponent(java.lang.String,\
+        \ net.fortuna.ical4j.model.PropertyList)"
+      justification: "require_explicit_casting"
+    - code: "java.method.returnTypeTypeParametersChanged"
+      old: "method <T extends net.fortuna.ical4j.model.Component> T net.fortuna.ical4j.model.ComponentFactoryImpl::createComponent(java.lang.String,\
+        \ net.fortuna.ical4j.model.PropertyList, net.fortuna.ical4j.model.ComponentList<?\
+        \ extends net.fortuna.ical4j.model.Component>)"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.ComponentFactoryImpl::createComponent(java.lang.String,\
+        \ net.fortuna.ical4j.model.PropertyList, net.fortuna.ical4j.model.ComponentList<?\
+        \ extends net.fortuna.ical4j.model.Component>)"
+      justification: "require_explicit_casting"
+    - code: "java.method.returnTypeTypeParametersChanged"
+      old: "method <T extends net.fortuna.ical4j.model.Component> T net.fortuna.ical4j.model.component.Participant::copy()"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.component.Participant::copy()"
+      justification: "require_explicit_casting"
+    - code: "java.method.returnTypeTypeParametersChanged"
+      old: "method <T extends net.fortuna.ical4j.model.Component> T net.fortuna.ical4j.model.component.VAlarm::copy()"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.component.VAlarm::copy()"
+      justification: "require_explicit_casting"
+    - code: "java.method.returnTypeTypeParametersChanged"
+      old: "method <T extends net.fortuna.ical4j.model.Component> T net.fortuna.ical4j.model.component.VAvailability::copy()"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.component.VAvailability::copy()"
+      justification: "require_explicit_casting"
+    - code: "java.method.returnTypeTypeParametersChanged"
+      old: "method <T extends net.fortuna.ical4j.model.Component> T net.fortuna.ical4j.model.component.VEvent::copy()"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.component.VEvent::copy()"
+      justification: "require_explicit_casting"
+    - code: "java.method.returnTypeTypeParametersChanged"
+      old: "method <T extends net.fortuna.ical4j.model.Component> T net.fortuna.ical4j.model.component.VFreeBusy::copy()"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.component.VFreeBusy::copy()"
+      justification: "require_explicit_casting"
+    - code: "java.method.returnTypeTypeParametersChanged"
+      old: "method <T extends net.fortuna.ical4j.model.Component> T net.fortuna.ical4j.model.component.VJournal::copy()"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.component.VJournal::copy()"
+      justification: "require_explicit_casting"
+    - code: "java.method.returnTypeTypeParametersChanged"
+      old: "method <T extends net.fortuna.ical4j.model.Component> T net.fortuna.ical4j.model.component.VTimeZone::copy()"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.component.VTimeZone::copy()"
+      justification: "require_explicit_casting"
+    - code: "java.method.returnTypeTypeParametersChanged"
+      old: "method <T extends net.fortuna.ical4j.model.Component> T net.fortuna.ical4j.model.component.VToDo::copy()"
+      new: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.component.VToDo::copy()"
+      justification: "require_explicit_casting"
     - code: "java.method.returnTypeTypeParametersChanged"
       old: "method java.util.Optional<net.fortuna.ical4j.model.property.DtEnd<?>>\
         \ net.fortuna.ical4j.model.component.VEvent::getEndDate()"
