--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,9 @@ jobs:
   test:
     name: Test with Java ${{ matrix.jdk }}
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      
     strategy:
       fail-fast: false
       matrix:
@@ -14,10 +17,12 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: actions/setup-java@v3
+      - uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: ${{ matrix.jdk }}
           cache: 'gradle'
-      - uses: gradle/gradle-build-action@v2
-      - run: ./gradlew check -x test --console=plain --warning-mode all
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+      - name: Build with Gradle Wrapper
+        run: ./gradlew check -x test --console=plain --warning-mode all
