--- a/.github/workflows/publish-snapshots.yml
+++ b/.github/workflows/publish-snapshots.yml
@@ -16,17 +16,17 @@ jobs:
     needs: test
     if: ${{ needs.gradle.result == 'success' }}
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-java@v3
+      - uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 11
-
       - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-
+        uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
       - name: Execute Gradle build
         run: ./gradlew build -x test publish
         env:
